@@ -123,7 +123,21 @@
 			<version>6.20.6</version>
 		</dependency>
 
-    </dependencies>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-core</artifactId>
+			<version>4.0.17</version> <!-- Adjust version as needed -->
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>testfx-junit5</artifactId>
+			<version>4.0.17</version> <!-- Adjust version as needed -->
+			<scope>test</scope>
+		</dependency>
+
+
+	</dependencies>
 
 
     <build>
@@ -140,6 +154,14 @@
                     </execution>
                 </executions>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version> <!-- Use the latest version -->
+				<configuration>
+					<argLine>--add-opens javafx.graphics/com.sun.javafx.application=ALL-UNNAMED</argLine>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 </project>
